<resources>
    <string name="app_name">WarSoftAPP</string>

    <string name="login">Login</string>
    <string name="hint_usuario">Usuario</string>
    <string name="hint_contraseña">Contraseña</string>
    <string name="content_login">Icono Login</string>
    <string name="btnLogin">Iniciar sesión</string>
    <string name="chxRecordar">Recordar</string>
    <string name="bienvenido">¡Bienvenido, Gustavo!</string>
    <string name="dashboard_historial">Historial de pedidos</string>
    <string name="dashboard_registrar">Registrar nuevo pedido</string>
    <string name="dashboard_buscar_cliente">Buscar cliente</string>
    <string name="dashboard_buscar_producto">Buscar producto</string>
    <string name="dashboard_logout">Salir de sesión</string>
    <string name="registrarNuevoCliente">Registrar nuevo cliente</string>
    <string name="dashboard_avance_venta">Avance de venta</string>
</resources>
