<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background_orange_270angle"
    android:padding="16dp"
    android:weightSum="10"
    tools:context=".View.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.6"
            android:gravity="center"
            android:text="LOGIN"
            android:textColor="@color/colorBlanco"
            android:textSize="48sp"
            android:textStyle="bold"/>

        <ImageView
            android:layout_width="120dp"
            android:layout_height="0dp"
            android:layout_weight="0.35"
            android:src="@drawable/carrito"
            android:transitionName="logoTransition"
            android:layout_gravity="center"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.4"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.7">

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.1"/>

        <EditText
            android:id="@+id/txt_usuario"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.8"
            android:background="@drawable/background_edit_text"
            android:hint="@string/hint_usuario"
            android:inputType="textPersonName"
            android:textColor="@color/colorTextHint"
            android:textColorHint="@color/colorTextHint"
            android:textSize="20sp"
            android:elevation="4dp"/>

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.1"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.3"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.7">

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.1"/>

        <EditText
            android:id="@+id/txt_contraseña"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.8"
            android:background="@drawable/background_edit_text"
            android:hint="@string/hint_contraseña"
            android:inputType="textPassword"
            android:textColor="@color/colorTextHint"
            android:textColorHint="@color/colorTextHint"
            android:textSize="20sp"
            android:elevation="4dp"/>

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.1"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.7">

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"/>

        <CheckBox
            android:id="@+id/cbx_recordar"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.4"
            android:buttonTint="@color/colorBlanco"
            android:text="@string/chxRecordar"
            android:textColor="@color/colorBlanco"
            android:textSize="18sp"/>

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.1"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.7"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.7">

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.15"/>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.7"
            android:background="@drawable/button_background"
            android:elevation="8dp"
            android:text="@string/btnLogin"
            android:textColor="@color/colorBlanco"
            android:textSize="16sp"
            />

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.15"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2"/>


</LinearLayout>