<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="10"
    tools:context=".View.MainActivity"
    android:background="@color/colorBlanco"
    android:padding="16dp">

    <TextView
        android:id="@+id/txt_saludo"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.2"
        android:gravity="center"
        android:text="@string/bienvenido"
        android:textColor="@color/colorTextHint"
        android:textStyle="bold"
        android:textSize="30sp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2.9">

        <android.support.v7.widget.CardView
            android:id="@+id/card_historial_pedido"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            app:cardCornerRadius="5dp"
            android:elevation="4dp"
            app:cardBackgroundColor="@color/centerColor"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_marginRight="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.1"/>

                <ImageView
                    android:layout_width="64dp"
                    android:layout_height="0dp"
                    android:layout_weight="0.6"
                    android:src="@drawable/historial"
                    android:scaleType="fitCenter"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.4"
                    android:textSize="18sp"
                    android:gravity="center"
                    android:text="@string/dashboard_historial"
                    android:textColor="@color/colorBlanco"
                    android:textStyle="bold" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.1"/>

            </LinearLayout>


        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/card_registrar_pedido"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            app:cardCornerRadius="5dp"
            android:elevation="4dp"
            app:cardBackgroundColor="@color/centerColor"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.1"/>

                <ImageView
                    android:layout_width="64dp"
                    android:layout_height="0dp"
                    android:layout_weight="0.6"
                    android:src="@drawable/registrar_producto_white"
                    android:scaleType="fitCenter"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.4"
                    android:textSize="18sp"
                    android:gravity="center"
                    android:text="@string/dashboard_registrar"
                    android:textColor="@color/colorBlanco"
                    android:textStyle="bold" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.1"/>

            </LinearLayout>


        </android.support.v7.widget.CardView>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2.9">

        <android.support.v7.widget.CardView
            android:id="@+id/card_buscar_cliente"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            app:cardCornerRadius="5dp"
            android:elevation="4dp"
            app:cardBackgroundColor="@color/centerColor"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_marginRight="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.1"/>

                <ImageView
                    android:layout_width="64dp"
                    android:layout_height="0dp"
                    android:layout_weight="0.6"
                    android:src="@drawable/buscar_cliente_white"
                    android:scaleType="fitCenter"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.4"
                    android:textSize="18sp"
                    android:gravity="center"
                    android:text="@string/dashboard_buscar_cliente"
                    android:textColor="@color/colorBlanco"
                    android:textStyle="bold" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.1"/>

            </LinearLayout>


        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/card_buscar_producto"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            app:cardCornerRadius="5dp"
            android:elevation="4dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            app:cardBackgroundColor="@color/centerColor"
            android:layout_marginLeft="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.1"/>

                <ImageView
                    android:layout_width="64dp"
                    android:layout_height="0dp"
                    android:layout_weight="0.6"
                    android:src="@drawable/buscar_producto_white"
                    android:scaleType="fitCenter"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.4"
                    android:textSize="18sp"
                    android:gravity="center"
                    android:text="@string/dashboard_buscar_producto"
                    android:textColor="@color/colorBlanco"
                    android:textStyle="bold" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.1"/>

            </LinearLayout>

        </android.support.v7.widget.CardView>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2.9">

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.25"/>

        <android.support.v7.widget.CardView
            android:id="@+id/card_logout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            app:cardCornerRadius="5dp"
            app:cardBackgroundColor="@color/centerColor"
            android:elevation="4dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.1"/>

                <ImageView
                    android:layout_width="64dp"
                    android:layout_height="0dp"
                    android:layout_weight="0.6"
                    android:src="@drawable/logout_blanco"
                    android:scaleType="fitCenter"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.4"
                    android:textSize="18sp"
                    android:gravity="center"
                    android:text="@string/dashboard_logout"
                    android:textColor="@color/colorBlanco"
                    android:textStyle="bold" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.1"/>

            </LinearLayout>


        </android.support.v7.widget.CardView>

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.25"/>

    </LinearLayout>

</LinearLayout>